# Knapsack_solvers

./: CMakeLists.txt  main.cpp
KnapsackSolversUI/: KnapsackSolversUI.pro  branchandbound.cpp  branchandbound.h  dynamicprogramming.cpp  dynamicprogramming.h  geneticalgorithm.cpp  geneticalgorithm.h  heuristics.cpp  heuristics.h  hybridalgorithm.cpp  hybridalgorithm.h  itemslist.cpp  itemslist.h  itemslist.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulatedannealing.cpp  simulatedannealing.h  solutionitemslist.cpp  solutionitemslist.h  solutionitemslist.ui  utils.cpp  utils.h
Methods/: BranchNBound.cpp  DynamicProgramming.cpp  GeneticAlgorithm.cpp  Heuristics.cpp  HybridAlgorithm.cpp  SimulatedAnnealing.cpp
Methods_benchmark/: BranchNBound.cpp  DynamicProgramming.cpp  GeneticAlgorithm.cpp  Heuristics.cpp  HybridAlgorithm.cpp  SimulatedAnnealing.cpp
benchmarking_scripts/: benchmark_exact_methods.sh  benchmark_genetic.sh  benchmark_heuristics.sh  benchmark_simulated_annealing.sh
datasets/: small.ukp  small2.ukp  small3.ukp
include/: KnapsackSolverAbstract.h  KnapsackSolverBnB.h  KnapsackSolverDP.h  KnapsackSolverGA.h  KnapsackSolverHybrid.h  KnapsackSolverSA.h  UnboundedKnapsackSolverBnB.h  UnboundedKnapsackSolverDP.h  UnboundedKnapsackSolverHeur.h  Utils.h
sources/: KnapsackSolverBnB.cpp  KnapsackSolverDP.cpp  KnapsackSolverGA.cpp  KnapsackSolverHybrid.cpp  KnapsackSolverSA.cpp  UnboundedKnapsackSolverBnB.cpp  UnboundedKnapsackSolverDP.cpp  Utils.cpp
